--- a/sass/yags.scss
+++ b/sass/yags.scss
@@ -208,24 +208,24 @@ $large_cols: integer specifying the number of columns to move the element by in 
 $medium_cols: integer specifying the number of columns to move the element by in the medium layout
 $small_cols: integer specifying the number of columns to move the element by in the small layout
 */
-.pull-base {
+.pull-push-base {
 	position: relative;
 }
 
 @mixin pull($large_cols, $medium_cols, $small_cols) {
-	@extend .pull-base;
+	@extend .pull-push-base;
 	@include pull-desktop($large_cols);
     @include pull-tablet($medium_cols);
     @include pull-mobile($small_cols);
 }
 
 @mixin pull-desktop($large_cols) {
-	@extend .pull-base;
+	@extend .pull-push-base;
 	left: -($column_width_large_layout * $large_cols);
 }
 
 @mixin pull-tablet($medium_cols) {
-	@extend .pull-base;
+	@extend .pull-push-base;
 	@include responsive($breakpoint_medium_layout - 1) {
 		/* Move the column to the left
 		(left == -BEFORE's width) */
@@ -234,7 +234,7 @@ $small_cols: integer specifying the number of columns to move the element by in 
 }
 
 @mixin pull-mobile($small_cols) {
-	@extend .pull-base;
+	@extend .pull-push-base;
 	@include responsive($breakpoint_small_layout - 1) {
 		left: -($column_width_small_layout * $small_cols);
 	}
@@ -249,17 +249,29 @@ $medium_cols: integer specifying the number of columns to move the element by in
 $small_cols: integer specifying the number of columns to move the element by in the small layout
 */
 @mixin push($large_cols, $medium_cols, $small_cols) {
-	position: relative; 
+	@extend .pull-push-base;
+	@include push-desktop($large_cols);
+    @include push-tablet($medium_cols);
+    @include push-mobile($small_cols);
+}
 
+@mixin push-desktop($large_cols) {
+	@extend .pull-push-base;
+	left: ($column_width_large_layout * $large_cols);
+}
+
+@mixin push-tablet($medium_cols) {
+	@extend .pull-push-base;
 	@include responsive($breakpoint_medium_layout - 1) {
 		/* Move the column to the right
 		(left == -BEFORE's width) */
 		left: ($column_width_medium_layout * $medium_cols);
-  	}
+	}
+}
 
+@mixin push-mobile($small_cols) {
+	@extend .pull-push-base;
 	@include responsive($breakpoint_small_layout - 1) {
 		left: ($column_width_small_layout * $small_cols);
 	}
-
-	left: ($column_width_large_layout * $large_cols);
 }
